fix code on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -464,7 +464,29 @@ h6 {
   left: 50%;
   transform: translateX(-50%);
   position: relative;
+  @media only screen and (max-width: 920px) {
+    left: 50%;
+    transform: translateX(-50vw);
+    border-radius: 0;
+    border-left: none;
+    border-right: none;
+    padding-left: 3rem;
+    padding-right: 1rem;
+    max-width: initial;
+    width: 100vw;
+    tr td:first-child {
+      display: none;
+    }
+  }
 }
+
+// Un-indent indented code blocks.
+ul > li > .highlight > div {
+  @media only screen and (max-width: 920px) {
+    transform: translateX(calc(-50vw - 2rem));
+  }
+}
+
 .highlight {
   // display: flex;
   // justify-content: center;
